MIR-1311 next java 21 migration and fixes